# Macur

./: README.md
Macur/: README.md  pyproject.toml  requirements.txt  run_train.sh
Macur/configs/: generate.yaml  pretrain.yaml  train.yaml
Macur/data/JAK2/: C1.sdf  Fedratinb.sdf  ligand.sdf
Macur/data/artifacts/: vocab_smiles.json
Macur/outputs/checkpoints/final/: config.json  generation_config.json  special_tokens_map.json  tokenizer_config.json
Macur/scripts/: data_prep.py  generate.py  pretrain.py  train.py  vina_dock.py
