[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macur"
version = "0.1.0"
description = "SMILES generative modeling with curriculum PPO and reproducible pipeline"
requires-python = ">=3.9"
readme = "README.md"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["macur*"]
exclude = []



